--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using System.Globalization
+@using Resources 
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -17,26 +19,32 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SupportCenter</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SupportCenter</a>
         </div>
-    </nav>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    
+            </ul>
+                
+        </div>
+    </div>
+</nav>
+<ul class="lang-switcher">
+    <li><a asp-controller="Home" asp-action="SetCulture" asp-route-culture="nl-BE" @(Resources.Culture.Name == "nl-BE"? "class=\"is-active\"" : ""  )>Nl</a></li>
+    <li><a asp-controller="Home" asp-action="SetCulture" asp-route-culture="en-US" @(Resources.Culture.Name == "en-US"? "class=\"is-active\"" : ""  )>En</a></li>
+</ul>
 
     <partial name="_CookieConsentPartial" />
 
