heb test terug verwijderd

--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Home/Index.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
     </a>
 </div>*@
 <div class="jumbotron">
-    <h1>@Resources.SupportCenter TEST</h1>
+    <h1>@Resources.SupportCenter</h1>
     <p>@Resources.Welkom</p>
 </div>
 
