Globalization en Localization af?

--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Home/About.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Home/About.cshtml
@@ -1,7 +1,6 @@
-﻿@{
-    ViewData["Title"] = "About";
-}
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+﻿@using Resources
 
-<p>Use this area to provide additional information.</p>
+<h2>@Resources.About</h2>
+<h3>@Resources.AboutDesc</h3>
+
+<p>@Resources.AboutDesc2</p>
