--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Home/Contact.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Home/Contact.cshtml
@@ -1,8 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Contact";
-}
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+﻿@using Resources
+
+<h2>@Resources.Contact</h2>
+<h3>@Resources.ContactDesc</h3>
 
 <address>
     One Microsoft Way<br />
