--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Globalization
+@using Microsoft.AspNetCore.Http.Extensions
 @using Resources 
 <!DOCTYPE html>
 <html>
@@ -10,6 +11,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -35,6 +37,7 @@
                 <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                
                     
             </ul>
                 
@@ -42,8 +45,8 @@
     </div>
 </nav>
 <ul class="lang-switcher">
-    <li><a asp-controller="Home" asp-action="SetCulture" asp-route-culture="nl-BE" @(Resources.Culture.Name == "nl-BE"? "class=\"is-active\"" : ""  )>Nl</a></li>
-    <li><a asp-controller="Home" asp-action="SetCulture" asp-route-culture="en-US" @(Resources.Culture.Name == "en-US"? "class=\"is-active\"" : ""  )>En</a></li>
+    <li><a asp-controller="Home" asp-action="SetCulture" asp-route-culture="nl-BE" @(Resources.Culture.Name == "nl-BE"? "class=\"is-active\"" : ""  ) >NL</a></li>
+    <li><a asp-controller="Home" asp-action="SetCulture" asp-route-culture="en-US" @(Resources.Culture.Name == "en-US"? "class=\"is-active\"" : ""  ) >EN</a></li>
 </ul>
 
     <partial name="_CookieConsentPartial" />
