--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Ticket/Delete.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Ticket/Delete.cshtml
@@ -1,11 +1,11 @@
 @model SC.BL.Domain.Ticket
-
+@using Resources
 @{
     ViewBag.Title = "Ticket verwijderen";
 }
 
-<h2>Ticket verwijderen</h2>
-<p>Ben je zeker dat je onderstaand ticket wenst te verwijderen? </p>
+<h2>@Resources.VerwijderTicket</h2>
+<p>@Resources.VerwijderTicketMsg </p>
 
 @*<dl class="dl-horizontal">
     <dt>Id</dt><dd>@Model.TicketNumber</dd>
@@ -17,6 +17,6 @@
 <partial name="_TicketDetailsPartial" for="@Model"/>
 
 <form asp-controller="Ticket" asp-action="DeleteConfirmed" asp-route-id="@Model.TicketNumber"  method="post">
-    <input type="submit" value="Verwijderen"/> | <a asp-action="Index">Annuleer</a>
+    <input type="submit" value=@Resources.Verwijderen/> | <a asp-action="Index">@Resources.Anuleer</a>
 </form>
 
