--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Ticket/Index.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Ticket/Index.cshtml
@@ -1,20 +1,20 @@
 @model IEnumerable<SC.BL.Domain.Ticket>
-
+@using Resources
 @{
-    ViewBag.Title = "Tickets";
+    ViewBag.Title = @Resources.Tickets;
 }
 
-<h2>Tickets</h2>
+<h2>@Resources.Tickets</h2>
 
-<p><a asp-action="Create">Nieuw ticket</a></p>
+<p><a asp-action="Create">@Resources.NieuwTicket</a></p>
 
 <table class="table">
     <tr>
-        <th>Nummer</th>
-        <th>Account</th>
-        <th>Probleem</th>
-        <th>Aangemaakt op</th>
-        <th>Status</th>
+        <th>@Resources.Nummer</th>
+        <th>@Resources.Account</th>
+        <th>@Resources.Probleem</th>
+        <th>@Resources.Aangemaakt</th>
+        <th>@Resources.Status</th>
         <th></th>
     </tr>
     @foreach (SC.BL.Domain.Ticket ticket in Model)
@@ -26,9 +26,9 @@
             <td>@ticket.DateOpened</td>
             <td>@ticket.State</td>
             <td>
-                <a asp-action="Details" asp-route-id="@ticket.TicketNumber">Details</a>
-                 | <a asp-action="Edit" asp-route-id="@ticket.TicketNumber">Bewerk</a>
-                 | <a asp-action="Delete" asp-route-id="@ticket.TicketNumber">Verwijder</a>
+                <a asp-action="Details" asp-route-id="@ticket.TicketNumber">@Resources.Details</a>
+                 | <a asp-action="Edit" asp-route-id="@ticket.TicketNumber">@Resources.Bewerk</a>
+                 | <a asp-action="Delete" asp-route-id="@ticket.TicketNumber">@Resources.Verwijderen</a>
             </td>
         </tr>
     }
