--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Ticket/Index.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Ticket/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>@Resources.Tickets</h2>
 
 <p><a asp-action="Create">@Resources.NieuwTicket</a></p>
-
+<p>@ViewBag.CacheTest</p>
 <table class="table">
     <tr>
         <th>@Resources.Nummer</th>
