--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/UI-MVC/Views/Shared/_Layout.cshtml
@@ -1,12 +1,20 @@
 ﻿@using System.Globalization
+@using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Extensions
+@using Microsoft.AspNetCore.Localization
 @using Resources 
+
+@{
+    var httpContext = ViewContext.HttpContext;
+    var currentCulture = httpContext.Features.Get<IRequestCultureFeature>().RequestCulture.UICulture;
+}
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SupportCenter</title>
+    <title>@Resources.SupportCenter</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -44,15 +52,9 @@
                 <li><a asp-controller="Home" asp-action="SetCulture" asp-route-culture="en-US" @(Resources.Culture.Name == "en-US"? "class=\"is-active\"" : ""  ) >EN</a></li>
                
             </ul>
-            
-           
-                
-        </div>
+         </div>
     </div>
 </nav>
-<ul class="lang-switcher">
-   
-</ul>
 
     <partial name="_CookieConsentPartial" />
 
